k8s/zipkin/zipkin-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zipkin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin-server
  name: zipkin
  namespace: zipkin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zipkin-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zipkin-server
    spec:
      containers:
      - env:
        - name: STORAGE_PORT_9200_TCP_ADDR
          value: efk-elasticsearch.efk.svc
        - name: STORAGE_TYPE
          value: elasticsearch
        image: docker.io/openzipkin/zipkin:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 9411
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        name: zipkin
        ports:
        - containerPort: 9411
          name: zipkin-web
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health
            port: 9411
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 2
          timeoutSeconds: 5
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin-server
  name: zipkin
  namespace: zipkin
spec:
  ports:
  - name: zipkin-web
    port: 9411
    targetPort: 9411
  selector:
    app: zipkin-server
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    configuration.konghq.com: strip-path-false
  labels:
    app: zipkin-server
  name: zipkin
  namespace: zipkin
spec:
  rules:
  - http:
      paths:
      - path: /zipkin
        backend:
          serviceName: zipkin 
          servicePort: 9411
---
